# conformal-metric

./: .gitignore  README.md  pyproject.toml
conformal_metric/: __init__.py  mesh.py  solver.py
examples/: bunny_denoise.py  grid_demo.py  multi_mesh_benchmark.py  noise_sweep.py
